deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dr-demo-checkout-web
  namespace: commerce
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dr-demo-checkout-web.oodles-noodles.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dr-demo-checkout-web
                port:
                  number: 80
